@@ -1794,7 +1794,7 @@ sub lacks_ids_ok {
 
 =head2 $mech->button_exists( $button )
 
-Returns a boolean saying whether the submit C<$button> exists. Does not
+Returns a boolean saying whether a submit button with the name C<$button> exists. Does not
 do a test. For that you want C<button_exists_ok> or C<lacks_button_ok>.
 
 =cut
@@ -1823,7 +1823,7 @@ sub button_exists_ok {
 
     my $self   = shift;
     my $button = shift;
-    my $msg    = shift;
+    my $msg    = shift || qq{Button named "$button" exists};
 
     return $TB->ok( $self->button_exists( $button ), $msg );
 }
@@ -1831,7 +1831,7 @@ sub button_exists_ok {
 
 =head2 $mech->lacks_button_ok( $button [, $msg] )
 
-Asserts that the button exists on the page.
+Asserts that no button named C<$button> exists on the page.
 
 =cut
 
@@ -1840,7 +1840,7 @@ sub lacks_button_ok {
 
     my $self   = shift;
     my $button = shift;
-    my $msg    = shift;
+    my $msg    = shift || qq{No button named "$button" exists};
 
     return $TB->ok( !$self->button_exists( $button ), $msg );
 }
